syntax = "proto2";

import public "common_client.proto";
import public "bainiu_base.proto";

package ddproto;

//==============================百人牛牛==================================
enum bainiu_desk_status {
    BAINIU_WAIT_YAZHU = 1;  //正在押注
    BAINIU_WAIT_FAPAI = 2;  //正在发牌
    BAINIU_WAIT_BIPAI = 3;  //正在比牌
}

//押注区域
message bainiu_area_info {
    optional bainiu_area_name name = 1;  //押注区域名称
    optional bainiu_client_poker poker = 2;  //牌型
    optional int64 all_chips = 3;  //所有押注筹码总和
    optional int64 my_chips = 4;  //我的押注
}

//房间状态
message bainiu_client_desk {
    optional bainiu_desk_status status = 1;  //牌桌状态
    repeated bainiu_area_info areas = 2;  //押注区域状态
    optional int64 surplus_time = 3;  //牌桌剩余时间
    repeated bainiu_client_user users = 4;  //用户列表
}

//用户状态
message bainiu_client_user {
    optional uint32 user_id = 1; //用户id
    optional string image = 2;  //头像
    optional string nick_name = 3;  //昵称
    optional int64 coin = 4;  //拥有金币数
}

//===============================进房===================================
//进房请求
message bainiu_enter_desk_req {
    optional uint32 user_id = 1;
}
//进房回复
message bainiu_enter_desk_ack {
    optional ProtoHeader header = 1;
    optional bainiu_client_desk desk_state = 2;  //牌桌状态
    optional bainiu_client_user user_info = 3;  //我的用户信息
}

//===============================押注===================================
//押注overturn
message bainiu_yazhu_ot {
    optional int64 desk_time = 1;  //牌桌剩余时间
}

//押注请求
message bainiu_yazhu_req {
    optional uint32 user_id = 1;  //押注用户
    optional bainiu_area_name area_name = 2;  //押注的区域
    optional uint32 chips = 3;  //押注筹码值
}

//押注回复
message bainiu_yazhu_ack {
    optional ProtoHeader header = 1;
    optional uint32 user_id = 2;  //押注用户
    optional bainiu_area_name area_name = 3;  //押注的区域
    optional int64 chips = 4;  //押注筹码值
    optional int64 all_chips = 5;  //该区域当前所有筹码总和
    optional int64 surplus_coin = 6;  //用户剩余金币数
    optional int64 my_chips = 7;  //用户该区域总押注金币数
}

//押注广播
message bainiu_yazhu_bc {
    optional uint32 user_id = 1;  //押注用户
    optional bainiu_area_name area_name = 2;  //押注的区域
    optional int64 chips = 3;  //押注筹码值
    optional int64 all_chips = 4;  //该区域当前所有筹码总和
    optional int64 surplus_coin = 5;  //该用户剩余金币数
    optional int64 my_chips = 6;  //用户该区域总押注金币数
}

//===============================发牌=================================
//发牌广播
message bainiu_fapai_bc {
    repeated bainiu_client_poker poker = 1;  //牌型
    optional int64 desk_time = 2;  //牌桌剩余时间
}

//===============================比牌结果================================
//比牌类型
enum bainiu_win_type {
    BAINIU_BIPAI_PINGJU = 1; //平局
    BAINIU_BIPAI_SHENGLI = 2; //胜利
    BAINIU_BIPAI_SHIBAI = 3; //失败
    BAINIU_BIPAI_ZJTC = 4; //庄家通吃
    BAINIU_BIPAI_ZJTP = 5; //庄家通赔
}

//输赢列表
message bainiu_win_user_item {
    optional string nick_name = 1; //昵称
    optional int64 bill = 2;  //账单（输赢多少钱）
    optional uint32 userId = 3;  //user_id
    optional int64 surplus_coin = 4;  //剩余金币
}

//每个区域输赢多少钱
message bainiu_area_bill_item {
    optional bainiu_area_name area_name = 1;  //押注的区域
    optional int64 all_chips = 2;  //该区域押注金额
    optional int64 bill = 3;  //该区域账单，结算输赢多少钱
    repeated bainiu_win_user_item win_users = 4;  //在该区域中押注的排行榜中玩家输赢列表
}

//比牌结果广播
message bainiu_bipai_bc {
    optional int64 desk_time = 1; //剩余时间
    optional int64 surplus_coin = 2;  //剩余金币
    optional bainiu_win_type type = 3;  //输赢类型
    optional int64 my_chips = 4;  //我的下注
    optional int64 my_bill = 5;  //我的账单（输赢多少钱）
    optional int64 all_chips = 6;  //总下注
    optional int64 banker_bill = 7;  //庄家账单（输赢多少钱）
    repeated bainiu_win_user_item winer = 8;  //赢家列表
    repeated bainiu_area_bill_item area_bill = 9;  //区域输赢
}
